# mafiahelper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  entrypoint-api.sh  entrypoint-bot.sh  entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 2024_10_08_2103-cee64bcb7603_init.py  2024_11_30_2355-62920b5dad9d_add_users.py  2025_02_03_1546-6c09db951458_add_best_move.py  2025_04_09_2213-7e7f6f73932e_add_players_images.py
nginx/conf.d/: app.conf
src/: config.py  dependencies.py  main.py
src/api/: main.py
src/api/templates/: main.html  (+2 more)
src/bot/: auth.py  filters.py  keyboards.py  main.py  middleware.py  states.py  utils.py
src/core/: __init__.py  games.py
src/repositories/: avatars.py
src/usecases/: __init__.py  add_players_to_game.py  add_to_best_move.py  add_users_to_game.py  assign_as_first_killed.py  assign_player_to_seat.py  assign_role.py  create_game.py  create_player.py  create_user.py  delete_player.py  end_game.py  errors.py  games.py  get_game.py  get_games.py  get_player_stats.py  get_players.py  get_seat.py  get_user_stats.py  get_users.py  players.py  save_user.py  set_player_avatar.py  set_player_nickname.py  users.py
tests/: conftest.py  test_games.py  test_get_seat.py  test_player_stats.py  test_user_stats.py  test_users.py  test_win_conditions.py
tests/db/: test_dump.sql
tests/integration/: db.py  test_get_games.py  test_get_players.py
tests/mocks/: __init__.py  db.py
(+23 files in other folders)
