[project]
name = "mafia"
version = "1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.15.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "greenlet>=3.1.1",
    "jinja2>=3.1.6",
    "punq>=0.7.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "pytz>=2025.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
